--- a/k8s/apps/openobserve/externalsecret.yaml
+++ b/k8s/apps/openobserve/externalsecret.yaml
@@ -17,6 +17,7 @@ spec:
         ZO_S3_SECRET_KEY: '{{ .minio_secret_key }}'
         ZO_ROOT_USER_EMAIL: "openobserve@walnuts.dev"
         ZO_ROOT_USER_PASSWORD: '{{ .root_user_password }}'
+        ZO_META_POSTGRES_DSN: postgres://openobserve:{{ .dbpassword }}@postgresql-default.databases.svc.cluster.local/openobserve
   data:
   - secretKey: minio_access_key
     remoteRef:
@@ -30,3 +31,7 @@ spec:
     remoteRef:
       key: openobserve
       property: root_user_password
+  - secretKey: dbpassword
+    remoteRef:
+      key: postgres_passwords
+      property: openobserve
