--- a/k8s/apps/openobserve/helm.yaml
+++ b/k8s/apps/openobserve/helm.yaml
@@ -36,13 +36,20 @@ spec:
         secretKeyRef:
           name: openobserve-credentials
           key: ZO_ROOT_USER_PASSWORD
+    - name: ZO_META_POSTGRES_DSN
+      valueFrom:
+        secretKeyRef:
+          name: openobserve-credentials
+          key: ZO_META_POSTGRES_DSN
 
     config:
+      ZO_LOCAL_MODE: "false"
       ZO_LOCAL_MODE_STORAGE: "s3"
       ZO_S3_PROVIDER: "minio"
       ZO_S3_SERVER_URL: "https://minio.walnuts.dev"
       ZO_S3_REGION_NAME: "ap-northeast-1"
       ZO_S3_BUCKET_NAME: "open-observe"
+      ZO_META_STORE: "postgres"
 
     minio:
       enabled: false
