--- a/k8s/apps/openobserve/kustomization.yaml
+++ b/k8s/apps/openobserve/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: openobserve
-components:
-- ../../components/helm
 resources:
-- helm.yaml
 - externalsecret.yaml
+- service.yaml
+- statefulset.yaml
+- ingress.yaml
