--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -139,7 +139,13 @@ jobs:
           <details>
           <summary>Click to expand</summary>
 
+          diff
           \`\`\`diff
+          $(diff -u manifests-base.yaml manifests-head.yaml)
+          \`\`\`
+
+          dyff
+          \`\`\`yaml
           $(./dyff between manifests-base.yaml manifests-head.yaml)
           \`\`\`
 
