--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -145,7 +145,7 @@ jobs:
           \`\`\`
 
           dyff
-          \`\`\`yaml
+          \`\`\`diff
           $(./dyff between manifests-base.yaml manifests-head.yaml)
           \`\`\`
 
