--- a/k8s/apps/openobserve/image-policy.yaml
+++ b/k8s/apps/openobserve/image-policy.yaml
@@ -38,8 +38,6 @@ metadata:
 spec:
   imageRepositoryRef:
     name: openobserve
-  filterTags:
-    pattern: '(?P<major>[0-9]{4})\.(?P<miner>[0-9]+)\.(?P<patch>[0-9]+)'
   policy:
     semver:
-      range: ">=1.0.0"
+      range: ">=v1.0.0"
