--- a/k8s/apps/prometheus-stack/helm.yaml
+++ b/k8s/apps/prometheus-stack/helm.yaml
@@ -35,17 +35,34 @@ spec:
         enabled: false
       service:
         type: ClusterIP
-      plugins:
-      - https://zincsearch-releases.s3.us-west-2.amazonaws.com/zo_gp/zo_gp.tar.gz;zinclabs_openobserve
       admin:
         existingSecret: "grafana"
         userKey: admin-username
         passwordKey: admin-password
+      extraInitContainers:
+      - name: openobserve-plugin-loader
+        image: wbitt/network-multitool
+        imagePullPolicy: IfNotPresent
+        command:
+          [
+            "sh",
+            "-c",
+            "curl -o /var/lib/grafana/plugins/zo_gp.tar.gz https://zincsearch-releases.s3.us-west-2.amazonaws.com/zo_gp/zo_gp.tar.gz && cd /var/lib/grafana/plugins &&  tar -zxvf zo_gp.tar.gz",
+          ]
+        volumeMounts:
+          - name: plugins
+            mountPath: /var/lib/grafana/plugins
       extraSecretMounts:
       - name: auth-generic-oauth-secret
         secretName: grafana
         mountPath: /etc/secrets
         readOnly: true
+      extraVolumeMounts:
+      - name: plugins
+        mountPath: /var/lib/grafana/plugins
+      extraVolumes:
+      - name: plugins
+        emptyDir: {}
       grafana.ini:
         server:
           domain: grafana.walnuts.dev
