--- a/k8s/apps/tempo/helm.yaml
+++ b/k8s/apps/tempo/helm.yaml
@@ -35,4 +35,5 @@ spec:
           secretKeyRef:
             name: tempo-credentials
             key: MINIO_SECRET_KEY
-      extraArgs: -config.expand-env=true
+      extraArgs:
+        "-config.expand-env": true
