add otlp/tempo trace

--- a/k8s/apps/opentelemetry-collectors/otel-collector/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/otel-collector/otel-collector.yaml
@@ -31,7 +31,7 @@ spec:
         traces:
           receivers: [otlp]
           processors: [memory_limiter, batch]
-          exporters: [otlphttp]
+          exporters: [otlp/tempo, otlphttp]
         metrics:
           receivers: [otlp]
           processors: [memory_limiter, batch]
