add tls insecure

--- a/k8s/apps/opentelemetry-collectors/otel-collector/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/otel-collector/otel-collector.yaml
@@ -28,8 +28,8 @@ spec:
           Authorization: ${env:OPENOBSERVE_AUTHORIZATION}
       otelhttp/loki:
         endpoint: http://loki.monitoring.svc.cluster.local:3100/otlp/v1/logs
-        headers:
-          X-Scope-OrgID: ${env:LOKI_SCOPE_ORG_ID}
+        tls:
+          insecure: true
     service:
       pipelines:
         traces:
