--- a/k8s/apps/photoprism/statefulset.yaml
+++ b/k8s/apps/photoprism/statefulset.yaml
@@ -20,6 +20,7 @@ spec:
           requests:
             memory: 2Gi
           limits:
+            cpu: "2"
             memory: 4Gi
         env:
         # - name: PHOTOPRISM_DEBUG
