--- a/k8s/apps/photoprism/cronjob.yaml
+++ b/k8s/apps/photoprism/cronjob.yaml
@@ -20,8 +20,10 @@ spec:
             - "--cleanup"
             resources:
               requests:
+                cpu: 100m
                 memory: 2Gi
               limits:
+                cpu: "2"
                 memory: 4Gi
             env:
             - name: PHOTOPRISM_ORIGINALS_LIMIT
