--- a/k8s/apps/samba-backup/cronjob.yaml
+++ b/k8s/apps/samba-backup/cronjob.yaml
@@ -31,8 +31,10 @@ spec:
                 - /tmp/healthy
             resources:
               requests:
+                cpu: 100m
                 memory: 500Mi
               limits:
+                cpu: "1"
                 memory: 2Gi
             volumeMounts:
             - name: samba-backup-script
