--- a/k8s/apps/samba/deployment.yaml
+++ b/k8s/apps/samba/deployment.yaml
@@ -45,8 +45,10 @@ spec:
         resources:
           limits:
             memory: "4Gi"
+            cpu: "1000m"
           requests:
             memory: "100Mi"
+            cpu: "100m"
       nodeSelector:
         kubernetes.io/hostname: cake
       volumes:
