--- a/k8s/apps/zitadel/externalsecret.yaml
+++ b/k8s/apps/zitadel/externalsecret.yaml
@@ -19,6 +19,9 @@ spec:
           items:
           - key: config.yaml
             templateAs: Values
+      data:
+        masterkey: "{{ .masterkey }}"
+        postgres: "{{ .postgresdbpassword }}"
   data:
   - secretKey: masterkey
     remoteRef:
