--- a/k8s/apps/hedgedoc/externalsecret.yaml
+++ b/k8s/apps/hedgedoc/externalsecret.yaml
@@ -14,24 +14,28 @@ spec:
       type: Opaque
       data:
         db-url: postgres://hedgedoc:{{ .dbpassword }}@postgresql-default.databases.svc.cluster.local/hedgedoc
+        client-secret: "{{ .clientsecret }}"
+        minio-access-key: "{{ .minioaccesskey }}"
+        minio-secret-key: "{{ .miniosecretkey }}"
+        session-secret: "{{ .sessionsecret }}"
   data:
   - secretKey: dbpassword
     remoteRef:
       key: postgres_passwords
       property: hedgedoc
-  - secretKey: client-secret
+  - secretKey: clientsecret
     remoteRef:
       key: hedgedoc
       property: client-secret
-  - secretKey: minio-access-key
+  - secretKey: minioaccesskey
     remoteRef:
       key: hedgedoc
       property: minio-access-key
-  - secretKey: minio-secret-key
+  - secretKey: miniosecretkey
     remoteRef:
       key: hedgedoc
       property: minio-secret-key
-  - secretKey: session-secret
+  - secretKey: sessionsecret
     remoteRef:
       key: hedgedoc
       property: session-secret
