--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -136,15 +136,18 @@ jobs:
       - name: Build markdown comment with manifest diff
         run: |
           echo "## Manifest diff
+
+          # diff
           <details>
           <summary>Click to expand</summary>
-
-          diff
           \`\`\`diff
           $(diff -u manifests-base.yaml manifests-head.yaml)
           \`\`\`
+          </details>
 
-          dyff
+          # dyff
+          <details>
+          <summary>Click to expand</summary>
           \`\`\`diff
           $(./dyff between manifests-base.yaml manifests-head.yaml)
           \`\`\`
