--- a/k8s/apps/vault/helm.yaml
+++ b/k8s/apps/vault/helm.yaml
@@ -25,7 +25,7 @@ spec:
       volumes:
       - name: vault
         hostPath:
-          path: /var/data/vault
+          path: /mnt/data/share/vault
           type: Directory
       volumeMounts:
       - name: vault
