--- a/k8s/apps/zitadel/helm.yaml
+++ b/k8s/apps/zitadel/helm.yaml
@@ -41,6 +41,8 @@ spec:
     #    value: "debug"
     metrics:
       enabled: true
+      serviceMonitor:
+        enabled: true
 
     resources:
       requests:
