--- a/k8s/apps/mysql-default/mysqlcluster.yaml
+++ b/k8s/apps/mysql-default/mysqlcluster.yaml
@@ -33,6 +33,7 @@ spec:
       name: mysql-data
     spec:
       accessModes: [ "ReadWriteOnce" ]
+      storageClassName: "longhorn"
       resources:
         requests:
           storage: 1Gi
