--- a/k8s/apps/opentelemetry-collectors/otel-collector/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/otel-collector/otel-collector.yaml
@@ -17,6 +17,26 @@ spec:
       batch:
         send_batch_size: 10000
         timeout: 10s
+      k8sattributes:
+        auth_type: "serviceAccount"
+        extract:
+          metadata:
+            - k8s.pod.name
+            - k8s.pod.uid
+            - k8s.deployment.name
+            - k8s.cluster.name
+            - k8s.namespace.name
+            - k8s.node.name
+            - k8s.pod.start_time
+        pod_association:
+          - sources: # First try to use the value of the resource attribute k8s.pod.ip
+              - from: resource_attribute
+                name: k8s.pod.ip
+          - sources: # Then try to use the value of the resource attribute k8s.pod.uid
+              - from: resource_attribute
+                name: k8s.pod.uid
+          - sources: # If neither of those work, use the request's connection to get the pod IP.
+              - from: connection
     exporters:
       otlp/tempo:
         endpoint: tempo.monitoring.svc.cluster.local:4317
@@ -34,15 +54,15 @@ spec:
       pipelines:
         traces:
           receivers: [otlp]
-          processors: [memory_limiter, batch]
+          processors: [memory_limiter, batch, k8sattributes]
           exporters: [otlp/tempo, otlphttp/openobserve]
         metrics:
           receivers: [otlp]
-          processors: [memory_limiter, batch]
+          processors: [memory_limiter, batch, k8sattributes]
           exporters: [otlphttp/openobserve]
         logs:
           receivers: [otlp]
-          processors: [memory_limiter, batch]
+          processors: [memory_limiter, batch, k8sattributes]
           exporters: [otlphttp/loki, otlphttp/openobserve]
   env:
   - name: OPENOBSERVE_AUTHORIZATION
