--- a/k8s/apps/opentelemetry-collectors/kubelet/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/kubelet/otel-collector.yaml
@@ -4,6 +4,7 @@ metadata:
   name: kubelet
 spec:
   serviceAccount: kubelet-collector
+  mode: deployment
   config:
     receivers:
       kubeletstats:
