--- a/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
@@ -54,24 +54,24 @@ spec:
           parse_from: attributes["log.file.path"]
           cache:
             size: 128
-        - type: move
-          from: attributes.stream
-          to: attributes["log.iostream"]
-        - type: move
-          from: attributes.container_name
-          to: resource["k8s.container.name"]
-        - type: move
-          from: attributes.namespace
-          to: resource["k8s.namespace.name"]
-        - type: move
-          from: attributes.pod_name
-          to: resource["k8s.pod.name"]
-        - type: move
-          from: attributes.restart_count
-          to: resource["k8s.container.restart_count"]
-        - type: move
-          from: attributes.uid
-          to: resource["k8s.pod.uid"]
+        # - type: move
+    #   from: attributes.stream
+    #   to: attributes["log.iostream"]
+    # - type: move
+    #   from: attributes.container_name
+    #   to: resource["k8s.container.name"]
+    # - type: move
+    #   from: attributes.namespace
+    #   to: resource["k8s.namespace.name"]
+    # - type: move
+    #   from: attributes.pod_name
+    #   to: resource["k8s.pod.name"]
+    # - type: move
+    #   from: attributes.restart_count
+    #   to: resource["k8s.container.restart_count"]
+    # - type: move
+    #   from: attributes.uid
+    #   to: resource["k8s.pod.uid"]
     processors:
       memory_limiter:
         check_interval: 1s
@@ -108,4 +108,3 @@ spec:
   securityContext:
     runAsUser: 0
     runAsGroup: 0
-    privileged: true
