--- a/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
@@ -14,47 +14,47 @@ spec:
         start_at: beginning
         include_file_path: true
         include_file_name: false
-        operators:
-        - type: router
-          id: get-format
-          routes:
-          - output: parser-docker
-            expr: 'body matches "^\\{"'
-          - output: parser-crio
-            expr: 'body matches "^[^ Z]+ "'
-          - output: parser-containerd
-            expr: 'body matches "^[^ Z]+Z"'
-        - type: regex_parser
-          id: parser-crio
-          regex: '^(?P<time>[^ Z]+) (?P<stream>stdout|stderr) (?P<logtag>[^ ]*) ?(?P<log>.*)$'
-          output: extract_metadata_from_filepath
-          timestamp:
-            parse_from: attributes.time
-            layout_type: gotime
-            layout: '2006-01-02T15:04:05.999999999Z07:00'
-        - type: regex_parser
-          id: parser-containerd
-          regex: '^(?P<time>[^ ^Z]+Z) (?P<stream>stdout|stderr) (?P<logtag>[^ ]*) ?(?P<log>.*)$'
-          output: extract_metadata_from_filepath
-          timestamp:
-            parse_from: attributes.time
-            layout: '%Y-%m-%dT%H:%M:%S.%LZ'
-        - type: json_parser
-          id: parser-docker
-          output: extract_metadata_from_filepath
-          timestamp:
-            parse_from: attributes.time
-            layout: '%Y-%m-%dT%H:%M:%S.%LZ'
-        - type: move
-          from: attributes.log
-          to: body
-        - type: regex_parser
-          id: extract_metadata_from_filepath
-          regex: '^.*\/(?P<namespace>[^_]+)_(?P<pod_name>[^_]+)_(?P<uid>[a-f0-9\-]{36})\/(?P<container_name>[^\._]+)\/(?P<restart_count>\d+)\.log$'
-          parse_from: attributes["log.file.path"]
-          cache:
-            size: 128
-        # - type: move
+        # operators:
+    # - type: router
+    #   id: get-format
+    #   routes:
+    #   - output: parser-docker
+    #     expr: 'body matches "^\\{"'
+    #   - output: parser-crio
+    #     expr: 'body matches "^[^ Z]+ "'
+    #   - output: parser-containerd
+    #     expr: 'body matches "^[^ Z]+Z"'
+    # - type: regex_parser
+    #   id: parser-crio
+    #   regex: '^(?P<time>[^ Z]+) (?P<stream>stdout|stderr) (?P<logtag>[^ ]*) ?(?P<log>.*)$'
+    #   output: extract_metadata_from_filepath
+    #   timestamp:
+    #     parse_from: attributes.time
+    #     layout_type: gotime
+    #     layout: '2006-01-02T15:04:05.999999999Z07:00'
+    # - type: regex_parser
+    #   id: parser-containerd
+    #   regex: '^(?P<time>[^ ^Z]+Z) (?P<stream>stdout|stderr) (?P<logtag>[^ ]*) ?(?P<log>.*)$'
+    #   output: extract_metadata_from_filepath
+    #   timestamp:
+    #     parse_from: attributes.time
+    #     layout: '%Y-%m-%dT%H:%M:%S.%LZ'
+    # - type: json_parser
+    #   id: parser-docker
+    #   output: extract_metadata_from_filepath
+    #   timestamp:
+    #     parse_from: attributes.time
+    #     layout: '%Y-%m-%dT%H:%M:%S.%LZ'
+    # - type: move
+    #   from: attributes.log
+    #   to: body
+    # - type: regex_parser
+    #   id: extract_metadata_from_filepath
+    #   regex: '^.*\/(?P<namespace>[^_]+)_(?P<pod_name>[^_]+)_(?P<uid>[a-f0-9\-]{36})\/(?P<container_name>[^\._]+)\/(?P<restart_count>\d+)\.log$'
+    #   parse_from: attributes["log.file.path"]
+    #   cache:
+    #     size: 128
+    # - type: move
     #   from: attributes.stream
     #   to: attributes["log.iostream"]
     # - type: move
