--- a/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
@@ -49,7 +49,7 @@ spec:
         headers:
           Authorization: ${env:OPENOBSERVE_AUTHORIZATION}
       otlphttp/loki:
-        endpoint: http://loki.monitoring.svc.cluster.local:3100/otlp/v1/logs
+        endpoint: http://loki.monitoring.svc.cluster.local:3100/otlp
         tls:
           insecure: true
     service:
