--- a/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
@@ -4,7 +4,7 @@ metadata:
   name: default
 spec:
   mode: deployment
-  serviceAccount: default-collector
+  serviceAccount: otel-collector
   config:
     receivers:
       otlp:
