--- a/k8s/apps/opentelemetry-collectors/kubelet/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/kubelet/otel-collector.yaml
@@ -3,7 +3,7 @@ kind: OpenTelemetryCollector
 metadata:
   name: kubelet
 spec:
-  serviceAccount: kubelet-collector
+  serviceAccount: otel-collector
   mode: daemonset
   config:
     receivers:
