--- a/k8s/apps/opentelemetry-collectors/kustomization.yaml
+++ b/k8s/apps/opentelemetry-collectors/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 namespace: opentelemetry-collector
 resources:
 - externalsecret.yaml
+- sa.yaml
 - ./default
 - ./filelog
 - ./kubelet
-- ./sa.yaml
