--- a/k8s/apps/mysql-default/mysqlcluster.yaml
+++ b/k8s/apps/mysql-default/mysqlcluster.yaml
@@ -55,4 +55,4 @@ spec:
   primaryServiceTemplate:
     spec:
       type: LoadBalancer
-      LoadBalancerIP: "192.168.0.133"
+      loadBalancerIP: "192.168.0.133"
