--- a/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   mode: deployment
   serviceAccount: otel-collector
+  image: otel/opentelemetry-collector-contrib:0.103.0
   config:
     receivers:
       otlp:
