--- a/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
@@ -49,7 +49,7 @@ spec:
         headers:
           Authorization: ${env:OPENOBSERVE_AUTHORIZATION}
       otlp/loki-exporter:
-        endpoint: loki-exporter.opentelemetry-collector.svc.cluster.local:4317
+        endpoint: loki-exporter-collector.opentelemetry-collector.svc.cluster.local:4317
         tls:
           insecure: true
     service:
