--- a/k8s/apps/loki/helm.yaml
+++ b/k8s/apps/loki/helm.yaml
@@ -22,6 +22,8 @@ spec:
         replication_factor: 1
       storage:
         type: filesystem
+      server:
+        grpc_server_max_send_msg_size: 104857600 # "error": "HTTP 500 \"Internal Server Error\": rpc error: code = ResourceExhausted desc = grpc: received message larger than max (4840865 vs. 4194304)"
       schemaConfig:
         configs:
         - from: '2024-01-01'
