--- a/k8s/apps/opentelemetry-collectors/sa.yaml
+++ b/k8s/apps/opentelemetry-collectors/sa.yaml
@@ -23,6 +23,9 @@ rules:
   - replicationcontrollers/status
   - resourcequotas
   - services
+  - configmaps
+  - nodes/metrics
+  - endpoints
   verbs:
   - get
   - watch
@@ -65,6 +68,25 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - discovery.k8s.io
+  resources:
+  - endpointslices
+  verbs: ["get", "list", "watch"]
+- apiGroups:
+  - monitoring.coreos.com
+  resources:
+  - servicemonitors
+  - podmonitors
+  verbs:
+  - '*'
+- apiGroups:
+  - networking.k8s.io
+  resources:
+  - ingresses
+  verbs: ["get", "list", "watch"]
+- nonResourceURLs: ["/metrics"]
+  verbs: ["get"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
