--- a/k8s/apps/opentelemetry-collectors/prometheus/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/prometheus/otel-collector.yaml
@@ -3,7 +3,7 @@ kind: OpenTelemetryCollector
 metadata:
   name: prometheus
 spec:
-  mode: deployment
+  mode: statefulset
   serviceAccount: otel-collector
   targetAllocator:
     enabled: true
