--- a/k8s/apps/opentelemetry-collectors/prometheus-exporter/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/prometheus-exporter/otel-collector.yaml
@@ -35,7 +35,7 @@ spec:
           enabled: true
     service:
       pipelines:
-        logs:
+        metrics:
           receivers: [otlp]
           processors: [memory_limiter, batch]
           exporters: [prometheus]
