--- a/k8s/apps/opentelemetry-collectors/prometheus-exporter/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/prometheus-exporter/otel-collector.yaml
@@ -39,3 +39,8 @@ spec:
           receivers: [otlp]
           processors: [memory_limiter, batch]
           exporters: [prometheus]
+  resources:
+    requests:
+      memory: 2Gi
+    limits:
+      memory: 6Gi
