--- a/k8s/apps/ac-hacking-2024/back/deployment.yaml
+++ b/k8s/apps/ac-hacking-2024/back/deployment.yaml
@@ -20,7 +20,8 @@ spec:
         resources:
           requests:
             memory: 5Mi
-          limits: {}
+          limits:
+            memory: 100Mi
         env:
         - name: PSQL_HOST
           value: "postgresql-default.databases.svc.cluster.local"
