--- a/k8s/apps/ac-hacking-2024/front/deployment.yaml
+++ b/k8s/apps/ac-hacking-2024/front/deployment.yaml
@@ -18,8 +18,9 @@ spec:
         ports:
         - containerPort: 3000
         resources:
-          limits: {}
+          limits:
+            memory: 100Mi
           requests:
-            memory: 30Mi
+            memory: 20Mi
       nodeSelector:
         kubernetes.io/arch: amd64
