https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/14900

--- a/k8s/apps/opentelemetry-collectors/prometheus-exporter/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/prometheus-exporter/otel-collector.yaml
@@ -31,8 +31,9 @@ spec:
         metric_expiration: 180m
         enable_open_metrics: true
         add_metric_suffixes: false
+        # https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/14900
         resource_to_telemetry_conversion:
-          enabled: true
+          enabled: false
     service:
       pipelines:
         metrics:
