--- a/k8s/apps/opentelemetry-collectors/prometheus-exporter/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/prometheus-exporter/otel-collector.yaml
@@ -26,7 +26,7 @@ spec:
     exporters:
       prometheus:
         endpoint: "0.0.0.0:8080"
-        namespace: monitoring
+        # namespace: monitoring
         send_timestamps: true
         metric_expiration: 180m
         enable_open_metrics: true
