--- a/k8s/apps/prometheus-exporter/servicemonitor.yaml
+++ b/k8s/apps/prometheus-exporter/servicemonitor.yaml
@@ -6,7 +6,9 @@ metadata:
     app: otel-exporter
 spec:
   endpoints:
-  - honorLabels: false
+  # If honor_labels is set to "true", label conflicts are resolved by keeping label values from the scraped data and ignoring the conflicting server-side labels.
+  # If honor_labels is set to "false", label conflicts are resolved by renaming conflicting labels in the scraped data to "exported_<original-label>" (for example "exported_instance", "exported_job") and then attaching server-side labels.
+  - honorLabels: true
     honorTimestamps: true
     path: /metrics
     port: "prometheus"
