--- a/k8s/apps/exclusive-http-server/deployment.yaml
+++ b/k8s/apps/exclusive-http-server/deployment.yaml
@@ -21,6 +21,6 @@ spec:
           containerPort: 8080
         resources:
           limits:
-            memory: 100Mi
+            memory: 1Gi
           requests:
             memory: 10Mi
