--- a/k8s/apps/exclusive-http-server/hpa.yaml
+++ b/k8s/apps/exclusive-http-server/hpa.yaml
@@ -12,7 +12,7 @@ spec:
   metrics:
   - type: Resource
     resource:
-      name: cpu
+      name: memory
       target:
         type: Utilization
-        averageUtilization: 85
+        averageUtilization: 70
