--- a/k8s/apps/exclusive-http-server/deployment.yaml
+++ b/k8s/apps/exclusive-http-server/deployment.yaml
@@ -24,3 +24,6 @@ spec:
             memory: 1Gi
           requests:
             memory: 10Mi
+        env:
+        - name: SLEEP_DURATION
+          value: "10ms"
