--- a/k8s/apps/exclusive-http-server/deployment.yaml
+++ b/k8s/apps/exclusive-http-server/deployment.yaml
@@ -27,3 +27,5 @@ spec:
         env:
         - name: SLEEP_DURATION
           value: "0ms"
+      nodeSelector:
+        kubernetes.io/arch: amd64
