--- a/k8s/apps/exclusive-http-server/deployment.yaml
+++ b/k8s/apps/exclusive-http-server/deployment.yaml
@@ -21,6 +21,7 @@ spec:
           containerPort: 8080
         resources:
           requests:
+            cpu: 1000m
             memory: 1Gi
         env:
         - name: SLEEP_DURATION
