--- a/k8s/apps/exclusive-http-server/deployment.yaml
+++ b/k8s/apps/exclusive-http-server/deployment.yaml
@@ -20,6 +20,9 @@ spec:
         - name: http
           containerPort: 8080
         resources:
+          limits:
+            cpu: 300m
+            memory: 1Gi
           requests:
             cpu: 100m
             memory: 1Gi
